<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">OnlyRugby Score Keeper</string>

    <string name="player_select">Select a player</string>
    <string name="team_select">Select a team</string>
    <string name="help">Help</string>
    <string name="login">Login</string>

    <string name="first_half">1st Half</string>
    <string name="second_half">2nd Half</string>

    <!--  Menu items -->
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <!--  NetworkActivity -->
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>

    <string name="action_settings">Settings</string>
    <string name="button_text">Press Me!</string>
    <string name="startgame">Play</string>
    <string name="pausegame">Pause</string>
    <string name="resetclock">Reset</string>
    <string name="testsubmenu">TEST</string>
    <string name="test1">test1</string>
    <string name="test2">test2</string>
    <string name="lineoutteam">Team</string>
    <string name="test2placeholder">Team2</string>
    <string name="team1placeholder">Team1</string>
    <string name="lineoutplayer">Player</string>
    <string name="playernumberlist">Player Number List PlaceHolder</string>
    <string name="playernamelist">Player Name List Placeholder</string>
    <string name="lineoutwonteam">Won by?</string>
    <string name="pausereason">Reason?</string>
    <string name="startSecondHalf">Start second half</string>
    <string name="EndGameClock">End Game Clock</string>


</resources>
