<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/lineoutteam"
          android:title="@string/lineoutteam">
        <menu>
            <item android:id="@+id/team1"
                  android:title="@string/team1placeholder" />
            <item android:id="@+id/team2"
                  android:title="@string/test2placeholder" />
        </menu>
    </item>
    <item android:id="@+id/lineoutplayer"
          android:title="@string/lineoutplayer">
        <menu>
            <item android:id="@+id/lineoutplayernumberlist"
                  android:title="@string/playernumberlist" />
            <item android:id="@+id/lineoutplayernamelist"
                  android:title="@string/playernamelist" />
        </menu>
    </item>
    <item android:id="@+id/lineoutwonteam"
          android:title="@string/lineoutwonteam">
        <menu>
            <item android:id="@+id/lineoutwonteam1"
                  android:title="@string/team1placeholder" />
            <item android:id="@+id/lineoutwonteam2"
                  android:title="@string/test2placeholder" />
        </menu>
    </item>
</menu>